# smiles-validator

./: .coverage  .gitignore  Justfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-to-pypi.yml  publish.yml  release.yml
src/smiles_validator/: __init__.py  validator.py
src/smiles_validator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_validator.py
